log
Fri May  8 09:56:54 PM UTC 2026: 
 tests:  0|6
========================================
b0b99a7
Fri May  8 10:07:21 PM UTC 2026: 
 tests:  0|6
========================================
36e8bf5
Thu May 14 08:05:52 PM UTC 2026: 
 tests:  0|6
========================================
3e1107e
Thu May 14 08:14:06 PM UTC 2026: 
 graph.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘getWeight’:
graph.c:53:5: error: unknown type name ‘Node’
   53 |     Node* origen = findNode(g, label1);
      |     ^~~~
graph.c:53:20: error: implicit declaration of function ‘findNode’ [-Wimplicit-function-declaration]
   53 |     Node* origen = findNode(g, label1);
      |                    ^~~~~~~~
graph.c:53:20: error: initialization of ‘int *’ from ‘int’ makes pointer from integer without a cast [-Wint-conversion]
graph.c:55:5: error: unknown type name ‘Node’
   55 |     Node* destino = findNode(g, label2);
      |     ^~~~
graph.c:55:21: error: initialization of ‘int *’ from ‘int’ makes pointer from integer without a cast [-Wint-conversion]
   55 |     Node* destino = findNode(g, label2);
      |                     ^~~~~~~~
graph.c:55:11: error: unused variable ‘destino’ [-Werror=unused-variable]
   55 |     Node* destino = findNode(g, label2);
      |           ^~~~~~~
cc1: all warnings being treated as errors
5289358
Thu May 14 08:16:56 PM UTC 2026: 
 graph.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘getWeight’:
graph.c:53:5: error: unknown type name ‘Node’
   53 |     Node* origen = map_search(g->adjacencyMap, label1);
      |     ^~~~
graph.c:53:48: error: passing argument 2 of ‘map_search’ discards ‘const’ qualifier from pointer target type [-Werror=discarded-qualifiers]
   53 |     Node* origen = map_search(g->adjacencyMap, label1);
      |                                                ^~~~~~
In file included from graph.c:8:
map.h:22:37: note: expected ‘void *’ but argument is of type ‘const char *’
   22 | MapPair *map_search(Map *map, void *key);
      |                               ~~~~~~^~~
graph.c:53:20: error: initialization of ‘int *’ from incompatible pointer type ‘MapPair *’ [-Wincompatible-pointer-types]
   53 |     Node* origen = map_search(g->adjacencyMap, label1);
      |                    ^~~~~~~~~~
graph.c:58:5: error: unknown type name ‘Node’
   58 |     Node* destino = map_search(g->adjacencyMap, label2);
      |     ^~~~
graph.c:58:49: error: passing argument 2 of ‘map_search’ discards ‘const’ qualifier from pointer target type [-Werror=discarded-qualifiers]
   58 |     Node* destino = map_search(g->adjacencyMap, label2);
      |                                                 ^~~~~~
map.h:22:37: note: expected ‘void *’ but argument is of type ‘const char *’
   22 | MapPair *map_search(Map *map, void *key);
      |                               ~~~~~~^~~
graph.c:58:21: error: initialization of ‘int *’ from incompatible pointer type ‘MapPair *’ [-Wincompatible-pointer-types]
   58 |     Node* destino = map_search(g->adjacencyMap, label2);
      |                     ^~~~~~~~~~
graph.c:58:11: error: unused variable ‘destino’ [-Werror=unused-variable]
   58 |     Node* destino = map_search(g->adjacencyMap, label2);
      |           ^~~~~~~
cc1: all warnings being treated as errors
0ee286f
Thu May 14 08:17:23 PM UTC 2026: 
Compilation failed
In file included from test.c:5:
graph.c: In function ‘getWeight’:
graph.c:53:5: error: unknown type name ‘Node’
   53 |     Node* origen = map_search(g->adjacencyMap, label1);
      |     ^~~~
graph.c:53:48: error: passing argument 2 of ‘map_search’ discards ‘const’ qualifier from pointer target type [-Werror=discarded-qualifiers]
   53 |     Node* origen = map_search(g->adjacencyMap, label1);
      |                                                ^~~~~~
In file included from graph.c:8:
map.h:22:37: note: expected ‘void *’ but argument is of type ‘const char *’
   22 | MapPair *map_search(Map *map, void *key);
      |                               ~~~~~~^~~
graph.c:53:20: error: initialization of ‘int *’ from incompatible pointer type ‘MapPair *’ [-Wincompatible-pointer-types]
   53 |     Node* origen = map_search(g->adjacencyMap, label1);
      |                    ^~~~~~~~~~
graph.c:58:5: error: unknown type name ‘Node’
   58 |     Node* destino = map_search(g->adjacencyMap, label2);
      |     ^~~~
graph.c:58:49: error: passing argument 2 of ‘map_search’ discards ‘const’ qualifier from pointer target type [-Werror=discarded-qualifiers]
   58 |     Node* destino = map_search(g->adjacencyMap, label2);
      |                                                 ^~~~~~
map.h:22:37: note: expected ‘void *’ but argument is of type ‘const char *’
   22 | MapPair *map_search(Map *map, void *key);
      |                               ~~~~~~^~~
graph.c:58:21: error: initialization of ‘int *’ from incompatible pointer type ‘MapPair *’ [-Wincompatible-pointer-types]
   58 |     Node* destino = map_search(g->adjacencyMap, label2);
      |                     ^~~~~~~~~~
graph.c:58:11: error: unused variable ‘destino’ [-Werror=unused-variable]
   58 |     Node* destino = map_search(g->adjacencyMap, label2);
      |           ^~~~~~~
cc1: all warnings being treated as errors
a693604
Thu May 14 08:20:47 PM UTC 2026: 
 graph.c | 4 ++++
 1 file changed, 4 insertions(+)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘getWeight’:
graph.c:53:5: error: unknown type name ‘Node’
   53 |     Node* origen = map_search(g->adjacencyMap, label1);
      |     ^~~~
graph.c:53:48: error: passing argument 2 of ‘map_search’ discards ‘const’ qualifier from pointer target type [-Werror=discarded-qualifiers]
   53 |     Node* origen = map_search(g->adjacencyMap, label1);
      |                                                ^~~~~~
In file included from graph.c:8:
map.h:22:37: note: expected ‘void *’ but argument is of type ‘const char *’
   22 | MapPair *map_search(Map *map, void *key);
      |                               ~~~~~~^~~
graph.c:53:20: error: initialization of ‘int *’ from incompatible pointer type ‘MapPair *’ [-Wincompatible-pointer-types]
   53 |     Node* origen = map_search(g->adjacencyMap, label1);
      |                    ^~~~~~~~~~
graph.c:58:5: error: unknown type name ‘Node’
   58 |     Node* destino = map_search(g->adjacencyMap, label2);
      |     ^~~~
graph.c:58:49: error: passing argument 2 of ‘map_search’ discards ‘const’ qualifier from pointer target type [-Werror=discarded-qualifiers]
   58 |     Node* destino = map_search(g->adjacencyMap, label2);
      |                                                 ^~~~~~
map.h:22:37: note: expected ‘void *’ but argument is of type ‘const char *’
   22 | MapPair *map_search(Map *map, void *key);
      |                               ~~~~~~^~~
graph.c:58:21: error: initialization of ‘int *’ from incompatible pointer type ‘MapPair *’ [-Wincompatible-pointer-types]
   58 |     Node* destino = map_search(g->adjacencyMap, label2);
      |                     ^~~~~~~~~~
graph.c:61:32: error: request for member ‘value’ in something not a structure or union
   61 |     List* lista = (List*)origen->value;
      |                                ^~
graph.c:62:11: error: unused variable ‘edge’ [-Werror=unused-variable]
   62 |     Edge* edge = (Edge*)list_first(lista);
      |           ^~~~
cc1: all warnings being treated as errors
235295a
Thu May 14 08:21:48 PM UTC 2026: 
 graph.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘getWeight’:
graph.c:53:5: error: unknown type name ‘Node’
   53 |     Node* origen = map_search(g->adjacencyMap, label1);
      |     ^~~~
graph.c:53:48: error: passing argument 2 of ‘map_search’ discards ‘const’ qualifier from pointer target type [-Werror=discarded-qualifiers]
   53 |     Node* origen = map_search(g->adjacencyMap, label1);
      |                                                ^~~~~~
In file included from graph.c:8:
map.h:22:37: note: expected ‘void *’ but argument is of type ‘const char *’
   22 | MapPair *map_search(Map *map, void *key);
      |                               ~~~~~~^~~
graph.c:53:20: error: initialization of ‘int *’ from incompatible pointer type ‘MapPair *’ [-Wincompatible-pointer-types]
   53 |     Node* origen = map_search(g->adjacencyMap, label1);
      |                    ^~~~~~~~~~
graph.c:58:5: error: unknown type name ‘Node’
   58 |     Node* destino = map_search(g->adjacencyMap, label2);
      |     ^~~~
graph.c:58:49: error: passing argument 2 of ‘map_search’ discards ‘const’ qualifier from pointer target type [-Werror=discarded-qualifiers]
   58 |     Node* destino = map_search(g->adjacencyMap, label2);
      |                                                 ^~~~~~
map.h:22:37: note: expected ‘void *’ but argument is of type ‘const char *’
   22 | MapPair *map_search(Map *map, void *key);
      |                               ~~~~~~^~~
graph.c:58:21: error: initialization of ‘int *’ from incompatible pointer type ‘MapPair *’ [-Wincompatible-pointer-types]
   58 |     Node* destino = map_search(g->adjacencyMap, label2);
      |                     ^~~~~~~~~~
graph.c:64:1: error: control reaches end of non-void function [-Werror=return-type]
   64 | }
      | ^
cc1: all warnings being treated as errors
9d7a23d
Thu May 14 08:31:15 PM UTC 2026: 
 graph.c | 21 ++++++++++++++-------
 1 file changed, 14 insertions(+), 7 deletions(-)
 tests:  0|0
32ef90e
Thu May 14 08:32:52 PM UTC 2026: 
 graph.c | 14 +++++++-------
 1 file changed, 7 insertions(+), 7 deletions(-)
 tests:  0|0
bdb7e4c
Thu May 14 08:36:12 PM UTC 2026: 
 graph.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  0|0
c1232da
